[apps/web] change the position to absolute to prevent scroll jump

--- a/apps/web/components/Pages/Channel/Content/Grid/index.module.scss
+++ b/apps/web/components/Pages/Channel/Content/Grid/index.module.scss
@@ -10,3 +10,9 @@
   padding-bottom: 0 !important;
   padding-top: 0 !important;
 }
+
+.line {
+  margin-top: -0.75rem;
+  position: absolute;
+  width: 100%;
+}
